WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140976
http/tests/xmlhttprequest/workers/methods.html sometimes times out with disk cache enabled
https://bugs.webkit.org/show_bug.cgi?id=140976
Summary
http/tests/xmlhttprequest/workers/methods.html sometimes times out with disk ...
Antti Koivisto
Reported
2015-01-27 18:55:42 PST
run-webkit-tests --release -2 http/tests/xmlhttprequest/workers/methods.html --iterations=100
Attachments
patch
(2.09 KB, patch)
2015-01-27 19:20 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
better patch
(2.85 KB, patch)
2015-01-28 16:39 PST
,
Antti Koivisto
cdumez
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2015-01-27 19:20:43 PST
Created
attachment 245505
[details]
patch
Chris Dumez
Comment 2
2015-01-27 19:31:03 PST
Comment on
attachment 245505
[details]
patch From the doc: "An invocation of a handler block with the done flag set, zero error and data set to dispatch_data_empty indicates that the I/O operation has encountered EOF." r=me.
Antti Koivisto
Comment 3
2015-01-28 16:39:13 PST
Created
attachment 245579
[details]
better patch
Chris Dumez
Comment 4
2015-01-28 16:55:37 PST
Comment on
attachment 245579
[details]
better patch View in context:
https://bugs.webkit.org/attachment.cgi?id=245579&action=review
r=me with nit.
> Source/WebKit2/NetworkProcess/cache/NetworkCacheStorageCocoa.mm:381 > + didCallCompletionHandler = true;
Could you please add a ASSERT(!didCallCompletionHandler) before this? I am not 100% convinced this will be called only once with done==Yes, even after reading the doc.
Antti Koivisto
Comment 5
2015-01-28 18:53:08 PST
Better fix:
https://trac.webkit.org/r179327
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug